melissa and bryan

--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -79,9 +79,15 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/0mdd2020/bryan.jpg)](https://circuitpython.org/)
+This week I'm working on the breakout for the DS1841 Temperature-Controlled, Non-Volatile I2C Logarithmic Resistor from Maxim. This chip is super cool. It's intended purpose is to provide temperature compensated bias control for avalanche photodiodes (APDs) used in optical transceivers. They're new to me, but apparently APDs are commonly used because they have a high sensitivity and wide bandwidth at the cost of being sensitive to temperature fluctuations. This chip can help with that! You can check out [this app note](https://www.maximintegrated.com/en/design/technical-documents/app-notes/1/1831.html) if you want to learn a bit more about APDs.
 
+[![Bryan](../assets/03242020/03242020bryan1.jpg)](https://circuitpython.org/)
 
+While most of us don't have a private fiber optic network with fussy APDs, the DS1841 has enough bells and whistles that I'm sure you'll be able to find a use for it in a project. It's basically an I2C controller potentiometer with a logarithmic curve, so you can use it in place of a mechanical log potentiometer to allow you to control it programmatically. Furthermore, the temperature compensation uses a LUT (look up table) to allow the user to adjust how the resistance varies according to temperature. You can however turn off the temperature based adjustment and use the LUT directly to give you the same control over the behavior of the resistance!
+
+[![Bryan](../assets/03242020/03242020bryan2.jpg)](https://circuitpython.org/)
+
+I'm looking forward to seeing what you all can do with this chip. While testing I've got it hooked up in a simple voltage divider. You could do something similar to control all sorts of things. LEDs, DC/DC converters, Op-Amps, the possibilities are endless!
 
 **Dan**
 
@@ -107,9 +113,9 @@ We are also working towards releasing version 5.1.0 of the core CircuitPython co
 
 **Kattni**
 
-[![Kattni](../assets/0mdd2020/kattni.jpg)](https://circuitpython.org/)
+This week, we finished updating all the CircuitPython libraries to use the latest Pylint and implemented the Black Python formatter. This was a huge project - thanks to Dylan for all his hard work. We updated the [Pylint guide](https://learn.adafruit.com/improve-your-code-with-pylint) to include Black and reference the latest version of Pylint. If you're going to contribute code to a CircuitPython library, check out this guide for how to ensure your code is up to standards.
 
-
+I'm currently working on the Bonsai Buckaroo guide. This guide will have all the details on the board, and examples for both the CLUE and the micro:bit. Keep an eye out for that coming soon!
 
 **Lucian**
 
@@ -119,9 +125,13 @@ We are also working towards releasing version 5.1.0 of the core CircuitPython co
 
 **Melissa**
 
-[![Melissa](../assets/0mdd2020/melissa.jpg)](https://circuitpython.org/)
+[![Melissa](../assets/03242020/03242020melissa.jpg)](https://circuitpython.org/)
 
+This past week I have been working on a guide for adding a new Single Board Computer to PlatformDetect, which is the first part of adding a new Board to Blinka. You can check out the guide, which is available at [https://learn.adafruit.com/adding-a-single-board-computer-to-platformdetect-for-blinka](https://learn.adafruit.com/adding-a-single-board-computer-to-platformdetect-for-blinka).
 
+After finishing that guide, I started on the guide for the next part, which is adding a new board to Blinka. This is probably the most difficult guide I've written due to the complexities of adding a new board and trying to explain it in an easy to understand way. Be sure to look out for the new Blinka guide coming soon.
+
+In addition to the new guide, I will be applying a new look to the Web Bluetooth Dashboard that I had worked on a couple of weeks ago that one of our designers came up with. Be sure to look out for that as well.
 
 **Scott**
 
