--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -135,9 +135,13 @@ In addition to the new guide, I will be applying a new look to the Web Bluetooth
 
 **Scott**
 
-[![Scott](../assets/0mdd2020/scott.jpg)](https://circuitpython.org/)
+This week I've continued adding low power support to the different chip families. SAMD51 and SAMD21 now work. The Spresense port is building but untested.
 
+This week I'm working on STM32 support and hopefully starting iMX RT support after that. The trickiest bit is providing a higher resolution clock for PulseIn to use.
 
+Once they are all preliminarily tested, I'll put out a call for folks to test it. So, keep an eye out.
+
+Lastly, on Saturday I streamed myself working on TinyLogicFriend, which is logic analyzer firmware built on top of TinyUSB. It will hook into Sigrok on the desktop side. There is also a [recording of the stream](https://www.youtube.com/watch?v=qetJHmfNA_g).
 
 ## Upcoming events!
 
