--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -23,9 +23,9 @@ Hi everyone! It's the latest Python for Microcontrollers newsletter, brought you
 
 [![](../assets/DIR-LOCATION/)]()
 
-[![microbit mag](../assets/03242020/31720thermal.jpg)](https://twitter.com/_skipt_/status/1240148972951474176)
+[![Thermal-Visual Player](../assets/03242020/32420thermal.jpg)](https://twitter.com/_skipt_/status/1240148972951474176)
 
-Combining the image from a Raspberry Pi camera and an Adafruit MLX90640 thermal camera on screen using CircuitPython. - {Twitter](https://twitter.com/_skipt_/status/1240148972951474176) and [GitHub](https://github.com/9nut/thermalplayer)
+Raspberry Pi Thermal-Visual Player combines the images from a Raspberry Pi camera and an Adafruit MLX90640 thermal camera on screen using CircuitPython. - [Twitter](https://twitter.com/_skipt_/status/1240148972951474176) and [GitHub](https://github.com/9nut/thermalplayer)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
 
