--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -27,6 +27,12 @@ Hi everyone! It's the latest Python for Microcontrollers newsletter, brought you
 
 Raspberry Pi Thermal-Visual Player combines the images from a Raspberry Pi camera and an Adafruit MLX90640 thermal camera on screen using CircuitPython. - [Twitter](https://twitter.com/_skipt_/status/1240148972951474176) and [GitHub](https://github.com/9nut/thermalplayer)
 
+[![Google open source Pigweed](../assets/03242020/032420thermal.jpg)](https://opensource.googleblog.com/2020/03/pigweed-collection-of-embedded-libraries.html)
+
+Pigweed is a collection of embedded-targeted libraries. They are open source for 32-bit microcontroller development released by Google. They address the classic challenge in the embedded space of reducing the time from running git clone to having a binary executing on a device, setting up an entire suite of tools needed for non-trivial production embedded projects.
+
+> 
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
 
 ## Made with Mu
