--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -27,7 +27,7 @@ Raspberry Pi Thermal-Visual Player combines the images from a Raspberry Pi camer
 
 [![Google open source Pigweed](../assets/03242020/032420pigweed.gif)](https://opensource.googleblog.com/2020/03/pigweed-collection-of-embedded-libraries.html)
 
-Pigweed is a collection of embedded-targeted libraries. They are open source for 32-bit microcontroller development released by Google. They address the classic challenge in the embedded space of reducing the time from running git clone to having a binary executing on a device, setting up an entire suite of tools needed for non-trivial production embedded projects.
+Pigweed is a collection of embedded-targeted libraries. They are open source for 32-bit microcontroller development released by Google. They address the classic challenge in the embedded space of reducing the time from running git clone to having a binary executing on a device, setting up an entire suite of tools needed for non-trivial production embedded projects. - [Google Blog](https://opensource.googleblog.com/2020/03/pigweed-collection-of-embedded-libraries.html) and [Source](http://pigweed.googlesource.com/)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).
 
