--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -239,9 +239,9 @@ Once they are all preliminarily tested, I'll put out a call for folks to test it
 
 Lastly, on Saturday I streamed myself working on TinyLogicFriend, which is logic analyzer firmware built on top of TinyUSB. It will hook into Sigrok on the desktop side. There is also a [recording of the stream](https://www.youtube.com/watch?v=qetJHmfNA_g).
 
-## Upcoming events!
+## Events
 
-
+The Python Software Foundation, organizers of PyCon US 2020 [released a message March 20th](https://pycon.blogspot.com/2020/03/pycon-us-2020-in-pittsburgh.html), have made the difficult decision to cancel the event in light of the COVID-19 pandemic. They are still working on the situation, and those affected should read their announcement. They are looking to host PyCon US 2021 in Pittsburgh, Pennsylvania, USA. - [PyCon Blog](https://pycon.blogspot.com/2020/03/pycon-us-2020-in-pittsburgh.html)
 
 ## Latest releases
 
