--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -33,6 +33,11 @@ Pigweed is a collection of embedded-targeted libraries. They are open source for
 
 Allowing studenta access to the serial REPL in CircuitPython on Chromebooks can be difficult on centrally locked down devices. Here is a web based IDE (crafted in HTML and JavaScript) that lets you see the REPL. Luckily due to WebUSB, this is actually possible as long as you are using a modern version of Chrome. - [Forum Post](https://forums.adafruit.com/viewtopic.php?f=60&t=163583) and [GitHub](https://github.com/Mr-Coxall/CircuitPython-IDE)
 
+[![CLUE @hackwimbleton](../assets/03242020/03242020cluejoy.jpg)](https://twitter.com/Codepope/status/1241433175227760642)
+
+CircuitPython work to interface an Adafruit CLUE board with the Elecfreaks Joystick:bits. - [Twitter](https://twitter.com/Codepope/status/1241433175227760642) and [Blog](https://codepope.dev/a-clue-and-a-joystick-bit/)
+
+
 PyDev of the Week: Jessica Garson on [Mouse vs Python](http://www.blog.pythonlibrary.org/2020/03/16/pydev-of-the-week-jessica-garson/)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/03/17/clue-gets-10-out-of-10-join-the-largest-show-and-tell-in-the-world-wednesday-7pm-et-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [title](url).
