--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -19,6 +19,14 @@ Template last updated on 02-24-2020 by Anne
 
 Hi everyone! It's the latest Python for Microcontrollers newsletter, brought you by the community! We're on [Discord](https://discord.gg/HYqvREz), [Twitter](https://twitter.com/search?q=circuitpython&src=typed_query&f=live), and for past newsletters - [view them all here](https://www.adafruitdaily.com/category/circuitpython/). If you're reading this on the web, [subscribe here](https://www.adafruitdaily.com/). Let's get started!
 
+## CircuitPython libraries are now using the latest Pylint and Black formatting!
+
+[![CircuitPython Library Checking](../assets/03242020/03242020pylint.jpg)](https://blog.adafruit.com/2020/03/17/circuitpython-libraries-are-now-using-the-latest-pylint-and-black-formatting/)
+
+Adafruit has completed updated every CircuitPython library to use the latest version of Pylint and implemented the Black Python formatter. Pylint is a tool for linting code. Linting is the process of checking your code for basic stylistic mistakes. It doesn’t verify that your code works, it simply checks that it looks as good as possible and is readable by others. Black is a really useful code formatting tool maintained by the Python Software Foundation. It reformats files to improve readability. When you contribute code to CircuitPython libraries, your code will be checked for both. You’ll be able to make any fixes at that point, but it’s much easier to set up Pylint and Black on your machine and run them locally.
+
+We have a guide to help! The [Improve Your Code with Pylint and Black guide](https://learn.adafruit.com/improve-your-code-with-pylint) was recently updated to include installation and usage of Black, as well as to reflect the update to the latest Pylint. You are no longer required to specify a particular version of Pylint or Python to be able to check your code locally. The process should be much simpler now. Check out the guide and you’ll be up and running in no time! - [Adafruit](https://blog.adafruit.com/2020/03/17/circuitpython-libraries-are-now-using-the-latest-pylint-and-black-formatting/)
+
 ## News from around the web!
 
 [![Thermal-Visual Player](../assets/03242020/032420thermal.jpg)](https://twitter.com/_skipt_/status/1240148972951474176)
@@ -37,6 +45,9 @@ Allowing studenta access to the serial REPL in CircuitPython on Chromebooks can 
 
 CircuitPython work to interface an Adafruit CLUE board with the Elecfreaks Joystick:bits. - [Twitter](https://twitter.com/Codepope/status/1241433175227760642) and [Blog](https://codepope.dev/a-clue-and-a-joystick-bit/)
 
+[![CLUE and Blinkt!](../assets/03242020/03242020blinkt.jpg)](https://twitter.com/DavidGlaude/status/1240394392751476736)
+
+David Glaude writes "Pimoroni famous Blinkt! is just a bunch of 8 APA-102 connected to GPIO 23 and 24. 4tronix_uk map that to micro:bit pin 16 and 5. In Adafruit CircuitPython, APA-102 is named DotStar. Driving the Blinkt! from the Clue was done in a matter of minutes." - [Twitter](https://twitter.com/DavidGlaude/status/1240394392751476736)
 
 PyDev of the Week: Jessica Garson on [Mouse vs Python](http://www.blog.pythonlibrary.org/2020/03/16/pydev-of-the-week-jessica-garson/)
 
