--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -75,6 +75,10 @@ Why Mu? Mu tries to make it as easy as possible to get started with programming 
 
 ## Coming soon
 
+[![Thunder Pack](../assets/03242020/03242020thunder.jpg)](https://github.com/jgillick/ThunderPack/tree/STM32F4)
+
+A pull request is pending to support CircuitPython on the Thunder pack board. The board includes an integrated battery, power management system, an STM32F11xx Arm microcontroller, USB bootloader, 4 high-power PWM outputs, and 12 GPIOs. - [Project GitHub](https://github.com/jgillick/ThunderPack/tree/STM32F4) and [CircuitPython PR](https://github.com/adafruit/circuitpython/pull/2723)
+
 ## New Learn Guides!
 
 [Adafruit Bonsai Buckaroo](https://learn.adafruit.com/adafruit-bonsai-buckaroo) from [Kattni](https://learn.adafruit.com/users/kattni)
