--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -65,6 +65,12 @@ CircuitPython work to interface an Adafruit CLUE board with the Elecfreaks Joyst
 
 David Glaude writes "Pimoroni famous Blinkt! is just a bunch of 8 APA-102 connected to GPIO 23 and 24. 4tronix_uk map that to micro:bit pin 16 and 5. In Adafruit CircuitPython, APA-102 is named DotStar. Driving the Blinkt! from the Clue was done in a matter of minutes." - [Twitter](https://twitter.com/DavidGlaude/status/1240394392751476736)
 
+[![Octopus ROBOT Board](../assets/03242020/03242020octopus.jpg)](https://twitter.com/LabOctopus/status/1242024064555909121)
+
+octopusLAB.cz posts that they have an ESP32 based ROBOT board which facilitates using robotics with MicroPython. [Twitter](https://twitter.com/LabOctopus/status/1242024064555909121), [GitHub](https://github.com/octopusengine/octopuslab/tree/master/esp32-micropython) and [Website](https://www.octopuslab.cz/vyvojove-desky/robot-board/)
+
+[Building a Physical Microbit Neural Network](https://buff.ly/2WxHRyn) - building a physical simple neural network in MicroPython . -[Twitter](https://twitter.com/scottturneruon/status/1241686570756956161) and [Medium](https://medium.com/@scottturneruon/building-a-physical-microbit-neural-network-ae8da306ecce)
+
 PyDev of the Week: Jessica Garson on [Mouse vs Python](http://www.blog.pythonlibrary.org/2020/03/16/pydev-of-the-week-jessica-garson/)
 
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/03/17/clue-gets-10-out-of-10-join-the-largest-show-and-tell-in-the-world-wednesday-7pm-et-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf-adafruit/)? [title](url).
