tinyusb on esp32-s2

--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -25,6 +25,12 @@ Adafruit has completed updated every CircuitPython library to use the latest ver
 
 We have a guide to help! The [Improve Your Code with Pylint and Black guide](https://learn.adafruit.com/improve-your-code-with-pylint) was recently updated to include installation and usage of Black, as well as to reflect the update to the latest Pylint. You are no longer required to specify a particular version of Pylint or Python to be able to check your code locally. The process should be much simpler now. Check out the guide and you’ll be up and running in no time! - [Adafruit](https://blog.adafruit.com/2020/03/17/circuitpython-libraries-are-now-using-the-latest-pylint-and-black-formatting/)
 
+## Espressif ESP32-S2 Sample Boards Shipping
+
+[![ESP32-S2 Board Samples](../assets/03242020/03242020esp32s2.jpg)](https://twitter.com/tinyusb/status/1242047273485266944)
+
+Espressif Systems has shipped sample ESP32-S2 boards to companies ordering them for evaluation purposes. Adafruit is working to port  [TinyUSB](https://github.com/hathach/tinyusb) for CircuitPython support. - [Twitter](https://twitter.com/tinyusb/status/1242047273485266944)
+
 ## The OSHW Summit wrist badge gets USB programming support
 
 [![OSHW Summit Wrist Badge](../assets/03242020/03242020wrist.jpg)](https://twitter.com/pdp7/status/1240376749105598468)
