--- a/_drafts/2020-03-24-draft.md
+++ b/_drafts/2020-03-24-draft.md
@@ -89,6 +89,8 @@ CircuitPython Weekly Meeting for March 23rd, 2020 on [YouTube](https://youtu.be/
 
 ## Made with Mu
 
+[![Mu Python Editor](../assets/03242020/03242020mu.jpg)](https://codewith.mu/)
+
 Why Mu? Mu tries to make it as easy as possible to get started with programming but aims to help you graduate to "real" development tools soon after. Everything in Mu is the "real thing" but presented in as simple and obvious way possible. It's like the toddling stage in learning to walk: you're finding your feet and once you're confident, you should move on and explore! Put simply, Mu aims to foster autonomy. Try out Mu today! - [codewith.mu](https://codewith.mu/)
 
 ## Coming soon
