Add Lucian and Kattni updates

--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -97,15 +97,19 @@ What is the team up to this week? Let’s check in!
 
 **Kattni**
 
-[![Kattni](../assets/0mdd2020/0mdd2020kattni.jpg)](https://circuitpython.org/)
+This week we've all had our lives turned a bit upside down. Remember you're not alone in this, and the Adafruit community is here to support you. Reach out to us on the [Adafruit Discord](https://adafru.it/discord) for any reason. There are thousands of people in the same situation, all continuing to gather together to support each other through this. Remember to share your projects and ideas, and continue to help others navigate this uncertain situation. We are strongest together.
 
+I worked on updating a couple of guides with new revisions of the boards: the [APDS9960 proximity, color, light and gesture sensor](https://learn.adafruit.com/adafruit-apds9960-breakout) and the [VL6180 time of flight sensor](https://learn.adafruit.com/adafruit-vl6180x-time-of-flight-micro-lidar-distance-sensor-breakout). We added STEMMA connectors to both boards, and I updated the guides with updated photos, wiring diagrams, schematics and pinouts. The guides now have everything needed to get started with your new STEMMA compatible breakouts.
 
+We've also begun the process of applying to [certify](https://certification.oshwa.org/) some of our Adafruit hardware as Open Source with the [Open Source Hardware Association](https://www.oshwa.org/). We're starting with our [CircuitPython compatible microcontroller boards](https://www.adafruit.com/category/956). Dylan has gathered the necessary info and started submitting the applications. We'll keep you posted on the progress. We're looking forward to being a part of the growing [list of OSHWA certified Open Source projects](https://certification.oshwa.org/list.html)!
 
 **Lucian**
 
-[![Lucian](../assets/0mdd2020/0mdd2020lucian.jpg)](https://circuitpython.org/)
+This past two weeks I've been working on transitioning the STM32 Port over to the H7 and F7. This has been a two parter - on the one hand I've been adding new functionality to support the Cortex M7 and new peripheral types featured on these chips, but on the other I've been revisiting and fixing old and inflexible code that wasn't built to handle chips outside of the STM32F4 series. One recent addition has been Python scripts to auto-generate peripheral code for the different variations of STM32 SoCs, as well as a revamp of how packages are managed in the Microcontroller module. 
 
+While I have my first version compiled and running on the H743 Nucleo, I'm still testing to make sure that the new changes do not break F4 builds like the Feather or Discovery boards. I've also been keeping tabs on other STM32 work that's been done by others recently, such as the new NVM module for flash memory, and the low power work being done by Scott via the RTC module. 
 
+Outside of Circuitpython, I've been in touch with some open-source colleagues who are working on projects that they hope will combat the spread of COVID19. I'm hoping I'll have more updates about that soon. 
 
 **Melissa**
 
