add rest of team inputs

--- a/_drafts/2020-03-31-draft.md
+++ b/_drafts/2020-03-31-draft.md
@@ -79,21 +79,25 @@ What is the team up to this week? Let’s check in!
 
 **Bryan**
 
-[![Bryan](../assets/0mdd2020/0mdd2020bryan.jpg)](https://circuitpython.org/)
+This week I finished up the DS1841 libraries for CircuitPython and Arduino including support for manually setting the wiper, editing and using the LUT, and enabling or disabling the temperature compensation feature. Now that we will have a log potentiometer, I hope to see more people using these handy little I2C helpers to give them programatic control over parts of their circuit.
 
+Next up I'm starting the long process of migrating all of our Arduino library repositories on GitHub over to using GitHub Actions for continuous integration. Having a solid CI system is invaluable for making sure that tedious things like checking formatting and documentation are still up to snuff without relying on humans to remember to check regularly. For folks with _many_ repositories and _many_ contributors, a good CI system is basically required. 
 
+GitHub Actions is particularly useful because it's well integrated with GitHub, which many folks use for hosting their projects. We have a _lot_ of repositories, so having a common framework for CI and project hosting is going to help keep things in check.
 
 **Dan**
 
-[![Dan](../assets/0mdd2020/0mdd2020dan.jpg)](https://circuitpython.org/)
+[![Dan](../assets/03312020/03312020dan.jpg)](https://circuitpython.org/)
 
+In the Bluetooth Low Energy device-of-the-week world, I'm now working on CircuitPython BLE drivers to connect to a couple of different low-cost pulse oximeters. I am reliably getting data from one, and am working on the other.
 
+I had a breakthrough on the SAMD51 spurious flash writes problem with the help of community members, and am now testing a fix. It appears we just need to set the brownout voltage detection to higher than the factory preset value.
 
 **Jeff**
 
-[![Jeff](../assets/0mdd2020/0mdd2020jeff.jpg)](https://circuitpython.org/)
+With my big projects, there's not much to show this week. The RGB matrix code with Protomatter is slowly improving, but more work is needed to make it behave 100% like a SPI or I2C display, and to make sure we lay the best groundwork for future framebuffer-bsaed displays.
 
-
+But the little things matter too! A pull request merged this week will improve the error message when assigning to properties that are read-only. Formerly, the error would state "'SPI' object has no property 'frequency'", but in a future release of CircuitPython it will say "'SPI' object cannot assign property 'frequency'", giving a better experience when troubleshooting your code.
 
 **Kattni**
 
@@ -113,15 +117,19 @@ Outside of Circuitpython, I've been in touch with some open-source colleagues wh
 
 **Melissa**
 
-[![Melissa](../assets/0mdd2020/0mdd2020melissa.jpg)](https://circuitpython.org/)
+[![Melissa](../assets/03312020/03312020melissa.jpg)](https://circuitpython.org/)
 
+This week I finished up a Follow-up guide for adding new Single Board Computers to Blinka. Where as the first guide was about adding detection code so that Blinka knew which board it was working with, this guide was the real meat about actually adding your board to Blinka. You can check out the guide at https://learn.adafruit.com/adding-a-single-board-computer-to-blinka.
 
+I also worked on re-skinning the Web Bluetooth Dashboard that I worked on a few weeks ago to make it match the Adafruit website much better. This was more than just changing some colors and adding a logo, but required working on developing some new panels so that it looked much better for the user.
 
 **Scott**
 
-[![Scott](../assets/0mdd2020/0mdd2020scott.jpg)](https://circuitpython.org/)
+Up to the start of this week I was continuing my work on sleep. I wrapped up STM32 and then iMX RT when surprisingly quickly. So, sleep is getting close and will need thorough testing. The PR will be out of draft once two dependent PRs are merged in.
 
+While I wait for those PRs, I've swapped to BLE MIDI. I've got MIDI coming out of CircuitPython and am working on getting MIDI in going. It's been quick so far and should wrap up soon. There are a few fixes to CircuitPython core that will be needed for it. I'm excited to hack an nRF52840 into some of these old 80s era piano keyboards I have to give them midi in and out. :-)
 
+Once BLE MIDI is done, I'll circle back to sleep and get that code checked in as well. Exciting times!
 
 ## Upcoming events!
 
